--- a/My Food Site/index.html
+++ b/My Food Site/index.html
@@ -22,7 +22,7 @@
     <nav id="Bera">
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
+            <li><a href="#Menu">Menu</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
@@ -56,7 +56,7 @@
 
 
 
-<section class="Menu">
+<section id="Menu">
 
 
 <div id="Kobe">
@@ -117,6 +117,9 @@
     </button>
     
 </div>
+
+
+
 
 
 
